# Hackathon-II

Phase 1/.specify/memory/: constitution.md
Phase 1/.specify/templates/: plan-template.md
Phase 2/: .env.bak  .env.example  README.md
Phase 2/.specify/memory/: constitution.md
Phase 2/.specify/templates/: tasks-template.md
Phase 2/frontend/: IN_MEMORY_TODO.md  vercel.json
Phase 2/frontend/app/: page.tsx
Phase 2/frontend/components/: TaskForm.tsx  TaskItem.tsx  TaskList.tsx
Phase 2/frontend/lib/: api.ts  db.ts  (+2 more)
Phase-1/: README.md  todo_app.py
Phase-2/: .env.bak  README.md
Phase-2/docs/: index.md
Phase-2/frontend/: auth.ts  package-lock.json  package.json
Phase-2/specs/: overview.md
Phase-3/: .env.example
Phase-3/backend/: .env  .env.example  README.md  check_users_schema.py  pyproject.toml  requirements.txt  test_chat.py  test_connection.py
Phase-3/backend/src/: __init__.py  main.py
Phase-3/backend/src/api/routers/: chat.py  mcp.py
Phase-3/backend/src/core/: __init__.py  config.py
Phase-3/backend/src/models/: conversation.py
Phase-3/backend/src/services/: __init__.py  chat_service.py  task_service.py
Phase-3/frontend/: package-lock.json  run-migrations.js
Phase-4/: README.md  backend-secret.yaml  docker-compose.yml  frontend-secret.yaml
Phase-4/backend/: .env  Dockerfile  debug_db_detailed.py  requirements.txt
Phase-4/backend-chart/: values.yaml
Phase-4/frontend/: Dockerfile  vercel.json
Phase-4/frontend-chart/: values.yaml
Phase-5/: README.md
Phase-5/backend/: .env.example  README.md
Phase-5/frontend/: package.json
(+127 files in other folders)
